@@ -3,7 +3,6 @@ package com.ohgood.newstocks.notice.dto;
 import com.ohgood.newstocks.notice.entity.Notice;
 import com.ohgood.newstocks.notice.mapper.NoticeMapper;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Data;
 
 @Data
@@ -17,7 +16,8 @@ public class NoticeDto {
     public void setNoticeImageDtoList(Notice notice) {
         this.noticeImageDtoList = notice.getNoticeImageList()
             .stream()
+            .filter(noticeImage -> !noticeImage.getDeleted()) // deleted가 false인 것만 필터링
             .map(NoticeMapper.INSTANCE::entityToNoticeImageDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
